--- a/ws/gl-sport-tracker/src/main/webapp/WEB-INF/web.xml
+++ b/ws/gl-sport-tracker/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>fr.istic.taa.yeoman</param-value>
+            <param-value>fr.istic.taa.yeoman.resources</param-value>
         </init-param>
         <init-param>
             <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
