Ajout gestions des sessions Ajout page « Amis » Modification « Accueil » Correction bug divers

--- a/ws/gl-sport-tracker/.settings/org.eclipse.core.resources.prefs
+++ b/ws/gl-sport-tracker/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/test/java=UTF-8
+encoding//yo/app/views/amis/amis.html=UTF-8
 encoding//yo/app/views/main/404.html=UTF-8
 encoding//yo/app/views/main/accueil.html=UTF-8
 encoding//yo/app/views/main/create.html=UTF-8
